# MELM

./: .gitignore  MELM_collaborators.csv  MELM_implementation_research_review_2026.md  MELM_validation_implementation_plan.md  MELM_whitepaper.docx  MELM_whitepaper.md  pyproject.toml
benchmarks/: README.md  authored_dialogue_events.jsonl  authored_dialogue_evidence_cases.jsonl  authored_dialogue_recall_cases.jsonl  dialogue_fixture_schema.md  morpheme_meaning_mvp.jsonl  sample_transcript_annotations.jsonl  sample_transcript_events.jsonl  sample_transcript_evidence_cases.jsonl  sample_transcript_recall_cases.jsonl  support_refunds_authored.jsonl  synthetic_episodic_cases.jsonl  synthetic_episodic_events.jsonl
docs/: README.md  abstention_strategy.md  babylm_evaluation_2026.md  babylm_reproduction.md  corpus_selection_2026.md  letta_comparison_plan.md  roadmap.md  slm_appliance_validation.md  sound_symbolism_deferred.md  support_refunds_dataset_authoring.md  tokenizer_strategy_2026.md  validation_report_template.md
experiments/: README.md  phase1_smoke.json
melm/: README.md  __init__.py
reports/: README.md  babylm_2026_download_report.md  babylm_2026_fast_eval_profile.json  babylm_2026_fast_eval_profile.md  babylm_2026_fast_tokenizer_decision.json  babylm_2026_fast_tokenizer_decision.md  babylm_2026_fast_tokenizer_full.json  babylm_2026_fast_tokenizer_full.md  babylm_2026_fast_tokenizer_full_hf.json  babylm_2026_fast_tokenizer_full_hf.md  babylm_2026_fast_tokenizer_full_hybrid.json  babylm_2026_fast_tokenizer_full_hybrid.md  babylm_2026_fast_tokenizer_sample.json  (+141 more)
(+206 files in other folders)
